src/App.css
body {
  font-family: 'Commissioner', sans-serif;
  font-weight: medium;
  font-size: 16px;
  line-height: 1.3em;
  background-color: hsla(0, 0%, 48%, 0.1);
}

.description {
  color: hsla(0, 0%, 48%, 0.75);
  font-size: smaller;
}

.hero {
  color: white;
  height: 300px;
  background: url("./images/image-hero-mobile.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.hero-content {
  display: flex;
  padding: 27px 22px;
  justify-content: space-between;
  align-items: center;
}

.hero-title {
  font-weight: bold;
  font-size: x-large;
}

.menu {
  width: 15px;
  height: 15px;
  background-image: url('./icons/icon-hamburger.svg');
  background-repeat: no-repeat;
}

.main {
  margin-bottom: 50px;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 275px;
  margin: 25px 25px 0px 25px;
  border-radius: 5px;
  padding: 30px 25px;
  background-color: white;
}

.header {
  margin-top: -55px;
  padding-top: 40px;
  padding-bottom: 30px;
}

.project-logo {
  width: 50px;
  height: 50px;
  background-size: 50px 50px;
  background-image: url('./icons/logo-mastercraft.svg');
  background-repeat: no-repeat;
  margin-top: -65px;
}

.project-name {
  font-size: larger;
  margin-top: 20px;
  padding: 0 10px;
}

.project-desc {
  margin-bottom: 20px;
}

.btn-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.btn {
  height: 50px;
  font-family: inherit;
  color: white;
  border: none;
  border-radius: 50px;
  padding: 0 25px;
}

.btn-primary {
  max-width: 200px;
  flex-grow: 2;
  float: left;
  background-color: hsl(176, 50%, 47%);
}

.btn-secondary {
  background-color: grey
}

.bookmark-btn {
  width: 50px;
  height: 50px;
  margin-left: 0px;
  background-size: 50px, 50px;
  background-image: url('./icons/icon-bookmark.svg');
  background-repeat: no-repeat;
  background-color: inherit;
}

.project-stats {
  justify-content: space-between;
}

.stat-tracker > .value {
  font-size: xx-large;
  font-weight: bold;
  margin-bottom: 15px;
}

.separator {
  margin: 20px 0px 30px 0px;
  width: 70px;
  height: 0;
  border: 1px solid hsl(0, 0%, 48%, 0.2);
}

.progress-bar {
  width: 100%;
  height: 10px;
  border-radius: 5px;
  background-color: hsl(0, 0%, 48%, 0.1);
  margin-top: 25px;
}

.progress-bar > .progress {
  height: 100%;
  background-color: hsl(176, 50%, 47%);
  border-radius: 5px;
}

.project-rewards {
  text-align: initial;
  align-items: initial;
}

.project-rewards > .title {
  margin-top: 0;
  font-size: large;
}

.reward {
  border: 1px solid hsl(0, 0%, 48%, 0.2);
  border-radius: 10px;
  padding: 20px 20px;
}

.reward > .name {
  font-size: smaller;
  margin: 0;
}

.reward > .min-price {
  font-size: smaller;
  color:hsl(176, 50%, 65%);
  margin-top: 0;
}

.reward:not(:first-child) {
  margin-top: 20px;
}

.reward .remaining {
  margin-top: 20px;
}

.reward .remaining .value {
  font-weight: bold;
  font-size: xx-large;
}

.reward .remaining .description {
  font-weight: bold;
  margin-left: 5px;
}

article.disabled {
  opacity: 50%;
}

article .btn {
  height: 40px;
  margin-top: 20px;
}

@media only screen and (min-width: 768px) {
  .separator {
    margin: 0 20px;
    width: 0;
    height: 70px;
  }
}

